--- a/package.json
+++ b/package.json
@@ -56,11 +56,13 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.523.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "react-resizable-panels": "^3.0.3",
